working on edit buttons

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   font-size: 30px;
-  text-align: center;
+  text-align: left;
 }
 
 .dropbtn {
