--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,14 @@
 }
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   font-size: 30px;
   text-align: left;
+  object-fit: cover;
+  border-radius: 5px;
+  margin: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
 }
 
 .dropbtn {
@@ -54,4 +58,12 @@
 
 .show {
   display: block;
+}
+
+h1 {
+  text-align: center;
+}
+
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
