--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ h1 {
   /* align-items: center; */
   margin: 10px 0;
   width: 90%;
+  gap: 10px;
 }
 
 .view {
@@ -49,8 +50,8 @@ h1 {
   border-radius: 5px;
   border: none;
   width: 25%; /* Use a percentage or specific width */
-  margin: 5px; /* Remove margin to make buttons touch */
-  padding: 15px 0; /* Remove left/right padding to avoid spacing */
+  /* margin: 5px; Remove margin to make buttons touch */
+  padding: 15px 10px; /* Remove left/right padding to avoid spacing */
   text-align: center; /* Center text inside the button */
   background-color: var(--verdigris);
   flex-grow: 1; /* This will make buttons grow and fill available space */
@@ -96,6 +97,7 @@ input {
   object-fit: cover;
   border-radius: 5px;
   margin: 5px;
+  width: 85%;
   /*overflow: hidden;*/
 }
 
